update for new domain name

--- a/404.html
+++ b/404.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>PopupGamesWeb</title><base href="https://matthewkohlhaas.github.io/PopupGamesApp/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><link href="styles.5c752db49fc0b108ae9f.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.f4e694d1420c3a75153b.bundle.js"></script><script type="text/javascript" src="polyfills.cde0ab4883d78d038cbc.bundle.js"></script><script type="text/javascript" src="main.b57e379fb2c5c21378b0.bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>PopupGamesWeb</title>
+  <base href="https://thesportsguys.github.io/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+</html>
